# multiplayer-kit

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: api.rs  error.rs  lib.rs  lobby.rs  room.rs  wasm_exports.rs
client/src/lobby/: client.rs  mod.rs  wasm.rs
client/src/room/: channel.rs  connection.rs  mod.rs  wasm.rs
client/src/transport/: mod.rs  websocket.rs  webtransport.rs
example/: .gitignore  Cargo.toml  README.md
example/chat-cli/: Cargo.toml
example/chat-cli/src/: main.rs
example/chat-client/: Cargo.toml
example/chat-client/src/: actor.rs  lib.rs  main.rs  native.rs  wasm.rs
example/chat-protocol/: Cargo.toml
example/chat-protocol/src/: lib.rs
example/chat-server/: Cargo.toml
example/chat-server/src/: actor.rs  lib.rs  main.rs
example/chat-tests/: Cargo.toml
example/chat-tests/src/: harness.rs  lib.rs  tests.rs
example/chat-web/: index.html
example/web/: index.html
helpers/: Cargo.toml
helpers/src/: actor.rs  channel.rs  framing.rs  lib.rs  typed.rs
helpers/src/actor/: actor.rs  addressed_message.rs  basic_sink.rs  mod.rs  protocol.rs  sink.rs  tests.rs
helpers/src/client_actor/: actor.rs  bridge.rs  channel.rs  connector.rs  mod.rs  runtime.rs  sink.rs  types.rs
helpers/src/game_actor/: mod.rs  target.rs  tests.rs
helpers/src/server_actor/: actor.rs  channel.rs  mod.rs  sink.rs  types.rs
helpers/src/spawning/: local_set.rs  mod.rs  spawner.rs  tokio.rs  wasm.rs
helpers/src/testing/: harness.rs  mod.rs  tests.rs
helpers/src/typed/: mod.rs  spawner.rs
helpers/src/typed/client/: channel.rs  mod.rs
helpers/src/typed/server/: actor.rs  channel.rs  mod.rs
helpers/src/utils/: channel_message.rs  mod.rs  platform.rs  typed_protocol.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: builder.rs  error.rs  lib.rs  lobby.rs  quic.rs  rest.rs  room.rs  ticket.rs  ws.rs
stuff-core/: Cargo.toml
stuff-core/src/: lib.rs
