[package]
name = "multiplayer-kit-client"
version = "0.1.0"
edition = "2024"

[dependencies]
multiplayer-kit-protocol = { path = "../protocol" }

# Cross-platform WebTransport
xwt-core = "0.9"
xwt-web-sys = { version = "0.13", optional = true }
xwt-wtransport = { version = "0.17", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async
futures = "0.3"

# Error handling
thiserror = "2"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

# Native support
tokio = { version = "1", features = ["sync", "rt"], optional = true }
wtransport = { version = "0.6", optional = true }

[features]
default = ["native"]
native = ["xwt-wtransport", "tokio", "wtransport"]
wasm = ["xwt-web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
