[package]
name = "multiplayer-kit-client"
version = "0.1.0"
edition = "2024"

[dependencies]
multiplayer-kit-protocol = { path = "../protocol" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async
futures = "0.3"

# Error handling
thiserror = "2"

# Native support (optional)
tokio = { version = "1", features = ["sync", "rt", "io-util"], optional = true }
wtransport = { version = "0.6", features = ["dangerous-configuration"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
url = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["native"]
native = ["tokio", "wtransport", "reqwest", "tokio-tungstenite", "url", "base64"]
wasm = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Window",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
] }
web-wt-sys = { git = "https://github.com/MOZGIII/xwt", branch = "master" }
serde-wasm-bindgen = "0.6"

[lib]
crate-type = ["cdylib", "rlib"]
