[package]
name = "multiplayer-kit-helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
multiplayer-kit-protocol = { path = "../protocol" }
multiplayer-kit-client = { path = "../client", optional = true, default-features = false }
multiplayer-kit-server = { path = "../server", optional = true }
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync"], optional = true }

[features]
default = ["client", "server"]
client = ["multiplayer-kit-client", "multiplayer-kit-client/native"]
server = ["multiplayer-kit-server", "tokio"]
wasm = ["multiplayer-kit-client", "multiplayer-kit-client/wasm"]
