[package]
name = "multiplayer-kit-helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
multiplayer-kit-protocol = { path = "../protocol" }
multiplayer-kit-client = { path = "../client", optional = true, default-features = false }
multiplayer-kit-server = { path = "../server", optional = true }
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "macros"], optional = true }
dashmap = { version = "6", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["client", "server"]
# Both client and wasm use futures for select! macro (works everywhere)
client = ["multiplayer-kit-client", "multiplayer-kit-client/native", "tokio", "futures"]
server = ["multiplayer-kit-server", "tokio", "dashmap"]
# WASM uses tokio::sync for channels (platform-agnostic) + futures for select
wasm = ["multiplayer-kit-client", "multiplayer-kit-client/wasm", "tokio", "wasm-bindgen", "wasm-bindgen-futures", "js-sys", "futures"]
