[package]
name = "chat-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat-cli"
path = "src/main.rs"

[dependencies]
multiplayer-kit-client = { path = "../../client" }
multiplayer-kit-protocol = { path = "../../protocol" }
multiplayer-kit-helpers = { path = "../../helpers" }

tokio = { version = "1", features = ["full", "io-std"] }
serde = { version = "1", features = ["derive"] }
