[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat-server"
path = "src/main.rs"

[dependencies]
multiplayer-kit-server = { path = "../../server" }
multiplayer-kit-protocol = { path = "../../protocol" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
